<resources>
    <string name="app_name">Movie App</string>
    <string name="movie">Movie</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="confirm_password">Confirm password</string>
    <string name="web_client_id">145489963703-egv21av5iueqbni3pa60o9darvcnjcok.apps.googleusercontent.com</string>
</resources>